Add new packages.